--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="facebook_app_id">273784879651395</string>
     <string name="facebook_application_id" translatable="false">273784879651395</string>
+    <string name="URL">http://aaruush.net/testing123/eventData/</string>
 </resources>
